<resources>
    <string name="app_name">Constraint Layout</string>
    <string name="tEmail">Email :</string>
    <string name="tPassword">Password :</string>
    <string name="bsignin">Sign-In</string>
    <string name="tData">Data Anda</string>
    <string name="temail">Email: </string>
    <string name="tpassword">Password: </string>
    <string name="txemail">Ini Hasil Email</string>
    <string name="txpassword">Ini Hasil Password</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="ldaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>

</resources>