<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tData"
        android:textSize="14pt"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="59dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tEmail"
        android:textSize="12pt"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="130dp" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txemail"
        android:textSize="12pt"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="130dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tPassword"
        android:textSize="12pt"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="208dp" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txpassword"
        android:textSize="12pt"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="208dp" />
</android.support.constraint.ConstraintLayout>