<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityHasil">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tData"
        android:textSize="14pt"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="64dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tEmail"
        android:textSize="12pt"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/TVEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txemail"
        android:textSize="12pt"
        app:layout_constraintBottom_toTopOf="@+id/TVPassword"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="165dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tPassword"
        android:textSize="12pt"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="310dp" />

    <TextView
        android:id="@+id/TVPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txpassword"
        android:textSize="12pt"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="310dp" />
</android.support.constraint.ConstraintLayout>