<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ldaftar"
        android:textSize="15pt"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="62dp" />

    <EditText
        android:id="@+id/edNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enama"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="129dp" />

    <EditText
        android:id="@+id/edAlamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ealamat"
        android:inputType="textMultiLine"
        android:text="Name"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="206dp" />

    <EditText
        android:id="@+id/EdEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/eemail"
        android:inputType="textEmailAddress"
        android:text="Name"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="284dp" />

    <EditText
        android:id="@+id/edPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/epass"
        android:inputType="textPassword"
        android:text="Name"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="372dp" />

    <EditText
        android:id="@+id/edrepas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/erepass"
        android:inputType="textPassword"
        android:text="Name"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="457dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSimpan"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_save"
        tools:layout_editor_absoluteX="308dp"
        tools:layout_editor_absoluteY="599dp" />

</android.support.constraint.ConstraintLayout>